@@ -1,3 +1,4 @@
+* Add name to contact mechanism
 * Improve distinction of address record name
 
 Version 4.6.0 - 2017-10-30
